2005-11-21 Senganal T   <tsenganal@novell.com>

        * Dns.cs : corrected a mistake in GetHostEntry ()

2005-11-21 Senganal T   <tsenganal@novell.com>

        * Dns.cs : added GetHostEntry() method for 2.0 api conformance

2005-11-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpRequestHeader.cs: add missing values.

2005-11-17 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpListenerPrefixCollection.cs:
	* HttpWebResponse.cs:
	* Dns.cs:
	* HttpListenerRequest.cs:
	* HttpWebRequest.cs:
	* HttpListenerResponse.cs: a few signature fixes for 2.0.

2005-11-17 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpListenerPrefixCollection.cs:
	* EndPointListener.cs:
	* HttpStreamAsyncResult.cs:
	* HttpListenerContext.cs:
	* HttpListenerBasicIdentity.cs:
	* AuthenticationSchemeSelector.cs:
	* HttpListener.cs:
	* WebHeaderCollection.cs:
	* ListenerPrefix.cs:
	* HttpListenerException.cs:
	* HttpResponseHeader.cs:
	* EndPointManager.cs:
	* HttpListenerRequest.cs:
	* HttpRequestHeader.cs:
	* BindIPEndPoint.cs:
	* ResponseStream.cs:
	* ChunkedInputStream.cs:
	* HttpStatusCode.cs:
	* ListenerAsyncResult.cs:
	* ChunkStream.cs:
	* HttpConnection.cs:
	* HttpUtility.cs:
	* HttpListenerResponse.cs:
	* RequestStream.cs: initial implementation of HttpListener. There are
	a few TODOs left (cookies, HTTPS) but almost everything else is in.

2005-11-15  Sebastien Pouliot  <sebastien@ximian.com>

	* IPv6Address.cs: Added on overload to ToString to get a the full 
	length address returned (as required by System.Uri).

2005-11-15  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* WebRequestMethods.cs: New 2.0 class.
	
2005-11-05  Atsushi Enomoto  <atsushi@ximian.com>

	* WebClient: use POST for DownloadData(). Fixed bug #76631.

2005-10-26  Atsushi Enomoto  <atsushi@ximian.com>

	* AuthenticationSchemes.cs : Fixed enum values and added [Flags].

2005-10-19  Atsushi Enomoto  <atsushi@ximian.com>

	* WebClient.cs : added net_2_0 DownloadString() and DownloadData()